# dreamplace_congestion

dreamplace/: BasicPlace_test.py  EvalMetrics_inflation.py  EvalMetrics_test.py  MomentumInflation.py  NonLinearPlace_flation_1.py  NonLinearPlace_inflation2.py  NonLinearPlace_test.py  PlaceObj_inflation.py  PlaceObj_poi.py  PlaceObj_test.py  configure.py  params_flation_1.json  params_test.json
dreamplace/ops/: CMakeLists.txt
dreamplace/ops/congestion_grad/: CMakeLists.txt  congestion_grad.py
dreamplace/ops/congestion_grad/src/: congestion_grad.cpp  congestion_grad_cuda_kernel.cu
dreamplace/ops/electric_potential/: electric_overflow.py  electric_potential.py
test/ispd2015/lefdef/: mgc_des_perf_1_test.json  mgc_des_perf_a_test.json  mgc_des_perf_b_test.json  mgc_edit_dist_a_test.json  mgc_fft_1_test.json  mgc_fft_2_test.json  mgc_fft_a_test.json  mgc_fft_b_test.json  mgc_matrix_mult_1_test.json  mgc_matrix_mult_2_test.json  mgc_matrix_mult_a_test.json  mgc_matrix_mult_b_test.json  mgc_matrix_mult_c_test.json  mgc_pci_bridge32_a_test.json  mgc_pci_bridge32_b_test.json  mgc_superblue11_a_test.json  mgc_superblue12_test.json  mgc_superblue14_test.json  mgc_superblue16_a_test.json  mgc_superblue19_test.json
